fix #2813 fix split terminal border not showing issue

--- a/src/client/components/terminal/terminal.styl
+++ b/src/client/components/terminal/terminal.styl
@@ -47,7 +47,7 @@
 
 .vertical
   .term-wrap.not-first-term
-    border-top 1px solid mmain-light
+    border-top 1px solid main-light
 .horizontal
   .term-wrap.not-first-term
     border-left 1px solid main-light
